--- a/style.css
+++ b/style.css
@@ -21,15 +21,15 @@
   color: white;
 }
 
-#banner::before{
-    content:'';
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.507);
+#banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.507);
 }
 
 #banner h1 {
@@ -230,6 +230,28 @@
   width: 500px;
   height: 500px;
   margin-left: 50px;
+}
+
+#partner h1{
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#partner p{
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+#partner .row {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#partner .row img{
+    width: 40%;
+    margin-bottom: 150px;
 }
 
 #contact {
